--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
     id 'nebula.optional-base' version '3.0.3'
@@ -16,7 +17,7 @@ plugins {
 }
 
 description = 'This project aims to provide the facility to easily implement JSON-RPC for the java programming language.'
-version = '1.4.3'
+version = '1.4.3-voiptech'
 group = 'com.github.briandilley.jsonrpc4j'
 
 sourceCompatibility = 1.7
@@ -168,3 +169,4 @@ bintray {
         }
     }
 }
+
